Add string quote support
Signed-off-by: Yunge Zhu <yunge.zhu@intel.com>

--- a/restful_tdx_att_service/Makefile
+++ b/restful_tdx_att_service/Makefile
@@ -116,7 +116,7 @@ App_Cpp_Flags += -DSGX_QPL_LOGGING=$(SGX_QPL_LOGGING)
 
 App_Cpp_Objects := $(App_Cpp_Files:.cpp=.o)
 
-App_Name := app
+App_Name := attest_service
 
 ######## Enclave Settings ########
 
